--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <string name="profile">Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="category_icon">Category Icon</string>
+    <string name="new_work_ny">New York, NY</string>
+    <string name="profile_avatar">Profile Avatar</string>
+    <string name="search">Search</string>
+    <string name="recommended">Recommended</string>
+    <string name="see_all">See All</string>
+    <string name="recommendation_image">Recommended Image</string>
+    <string name="bookmark_image">Bookmark Image</string>
+    <string name="popular_categories">Popular Categories</string>
 </resources>
