feat: Implement recommended activity design with API integration fix: Resolve home fragment design issues - Designed and implemented recommended activity layout. - Added functionality to fetch and set data from API for recommended activity. - Fixed layout issues in the home fragment to ensure proper alignment and styling.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="fare_with_currency_sign">%1$s %2$s</string>
     <string name="per_day">/%1$s</string>
     <string name="back_button_icon">Back Button Icon</string>
+    <string name="location_image">Location Image</string>
 </resources>
